# timer-focus

./: .gitignore  ABOUT.md  README.md  pyproject.toml
timer_focus/: alert.py  core.py  ctl.py  daemon.py  waybar.py
