[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timer-focus"
version = "0.1.3"
description = "Pomodoro timer with Waybar output and popup alerts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pomodoro-daemon = "timer_focus.daemon:main"
pomodoroctl = "timer_focus.ctl:main"
pomodoro-waybar = "timer_focus.waybar:main"
pomodoro-alert = "timer_focus.alert:main"

[tool.setuptools]
packages = ["timer_focus"]
